# ShuffleNetV2Plus_MxBase

./: CMakeLists.txt  preprocess.py
src/: CMakeLists.txt  Shufflenetv2plusClassify.cpp  Shufflenetv2plusClassify.h  main.cpp
